# ceviche-rs

./: Cargo.toml
examples/foobar/: Cargo.toml
examples/foobar/src/: main.rs
src/: lib.rs
src/controller/: windows.rs
